# srt-igt-splits

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: in_game_time.rs  main.rs  splits.rs
src/splits/: file_persistency.rs  splits.rs
