[package]
name = "srt-igt-splits"
version = "0.1.0"
edition = "2024"

[dependencies]
tesseract = "0.15.2"
opencv = { version = "0.95.0", features = ["clang-runtime"] }
anyhow = "1.0"
colored = "3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
clap = { version = "4.5.42", features = ["derive"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
tempfile = "3"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
